<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/resultClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_dp_8"
        android:layout_marginTop="@dimen/large_margin_32dp"
        android:padding="@dimen/standard_dp_8"
        android:text="@string/waiting_message_button_press"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_view_size_22sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dataClassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_dp_16"
        android:padding="@dimen/standard_dp_8"
        android:text="@string/message_text_empty"
        android:textColor="@color/black"
        android:textSize="@dimen/text_view_size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultClick" />

    <TextView
        android:id="@+id/dataClassDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_dp_8"
        android:text="@string/message_text_empty"
        android:textColor="@color/black"
        android:textSize="@dimen/text_view_size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataClassTitle" />

    <TextView
        android:id="@+id/loopActionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin_32dp"
        android:padding="@dimen/standard_dp_8"
        android:text="@string/loop_is_ready_to_start"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_view_size_22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataClassDescription" />

    <TextView
        android:id="@+id/loopResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_dp_16"
        android:padding="@dimen/standard_dp_8"
        android:text="@string/message_text_empty"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_view_size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loopActionStatus" />

    <Button
        android:id="@+id/buttonStartCycle"
        style="@style/start_cycle_button"
        app:layout_constraintBottom_toBottomOf="@+id/loopResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/loopActionStatus"
        app:layout_constraintTop_toTopOf="@+id/loopActionStatus"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonElseStartCycle"
        style="@style/else_cycle_button"
        app:layout_constraintBottom_toBottomOf="@+id/loopResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/loopActionStatus"
        app:layout_constraintTop_toTopOf="@+id/loopActionStatus"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_dp_16"
        android:backgroundTint="@color/design_default_color_error"
        android:padding="@dimen/standard_dp_16"
        android:text="@string/motivation_for_action_press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loopResult" />

    <Button
        android:id="@+id/buttonRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_dp_8"
        android:backgroundTint="@color/white"
        android:padding="@dimen/standard_dp_16"
        android:text="@string/try_again"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loopResult" />
</androidx.constraintlayout.widget.ConstraintLayout>